What's new:
- Change homepage carousel style
- Update image with 16/9 aspect ratio
- Add placeholder when loading image, load image failed