@@ -2,3 +2,4 @@ What's new:
 - Change homepage carousel style
 - Update image with 16/9 aspect ratio
 - Add placeholder when loading image, load image failed
+- User can click on image to see and zoom with full resolution
